Minor changes from review